@@ -2,12 +2,14 @@ package com.abas.orderapi.helper;
 
 import com.abas.orderapi.entity.Order;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class OrderBuilder {
     public static List<Order> getOrders() {
 
-        return List.of(
+        return new ArrayList<>(Arrays.asList(
                 Order.builder().orderNumber(1000).itemNumber(2000).quantity(12).unitPrice(100.51).build(),
                 Order.builder().orderNumber(1000).itemNumber(2001).quantity(31).unitPrice(200).build(),
                 Order.builder().orderNumber(1000).itemNumber(2002).quantity(22).unitPrice(150.86).build(),
@@ -24,6 +26,6 @@ public class OrderBuilder {
                 Order.builder().orderNumber(1002).itemNumber(2003).quantity(8).unitPrice(12.1).build(),
                 Order.builder().orderNumber(1002).itemNumber(2002).quantity(16).unitPrice(94).build(),
                 Order.builder().orderNumber(1002).itemNumber(2005).quantity(9).unitPrice(44.1).build(),
-                Order.builder().orderNumber(1002).itemNumber(2006).quantity(19).unitPrice(90).build());
+                Order.builder().orderNumber(1002).itemNumber(2006).quantity(19).unitPrice(90).build()));
     }
 }
